--- a/css/style.css
+++ b/css/style.css
@@ -111,17 +111,18 @@
 .site-main .brand-area .first-row .col-lg-4 > .single-brand{
     border: 1px solid var(--border-color);
     text-align: center;
-    padding: 0rem 0rem;
+    align-items: stretch;
+    padding: 1.8rem 0rem;
     margin: .9rem 0;
-    width: 180px;
+    width: 230px;
     height: 100px;
     cursor: pointer;
     transition: transform .4s ease;
 }
 
-.site-main .brand-area .first-row .col-lg-4 > .single-brand > img{
+/* .site-main .brand-area .first-row .col-lg-4 > .single-brand > img{
     width: 50%;
-}
+} */
 
 .site-main .brand-area .first-row .col-lg-4 > .single-brand:hover{
     box-shadow: var(--box-shadow);
@@ -145,7 +146,7 @@
     padding: 2rem 0;
     width: 40rem;
     height: 18rem;
-    padding-left: 8rem;
+    padding-left: 9rem;
     position: relative;
 }
 
@@ -170,7 +171,7 @@
 }
 
 .site-main .brand-area .experience-area .call-area{
-    padding-left: 10rem;
+    padding-left: 9rem;
 }
 /* End Language Area */
 
