--- a/css/responsive.css
+++ b/css/responsive.css
@@ -46,7 +46,7 @@
     }
 
     .site-main .brand-area .experience-area .call-area{
-        padding-left: 3%;
+        margin-left: 2.7rem;
     }
 
     .site-main .project-area .button-group button{
@@ -81,8 +81,8 @@
 }
 
 
-/* if the viewport is equal to 340px or less than that */ 
-@media only screen and (max-width: 792px){
+/* if the viewport is equal to 450px or less than that */ 
+@media only screen and (max-width: 450px){
     .site-main .about-area .about-title h2 > span{
         font-size: 31px;
         letter-spacing: 10px;
@@ -106,6 +106,10 @@
         font: normal 500 18px/40px var(--roboto);
     }
 
+    .site-main .project-area .grid .img img{
+        margin-left: -1.4rem;
+    } 
+
     .site-main .about-area .about-title p{
         padding: 0%;
     }
@@ -115,10 +119,19 @@
         margin: 5%;
     }
 
- 
+    .site-main .services-area .services{
+        margin-left: -2rem;
+    }
 }
 
+/* if the viewport is equal to 792px or less than that */ 
+@media only screen and (max-width: 792px){
+  
+    .site-main .services-area .services{
+        width: 130%;
+    }
 
+}
 
 /* if the viewport is equal to 1910px or less than that */ 
 @media only screen and (max-width: 1910px){
