--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 @import url(./partials/_global.css);
 
 /* start navigation */
+html{
+    scroll-behavior: smooth;
+}
 
 .header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 5rem;
@@ -236,6 +239,13 @@
     text-align: center;
 }
 
+.site-main .project-area .grid .our-project .img img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: 200px;
+}
 
 .site-main .project-area .grid .our-project .img a:hover img{
     filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
